--- a/package.json
+++ b/package.json
@@ -1,8 +1,409 @@
 {
   "name": "hello-microverse",
   "version": "1.0.0",
-  "description": "",
+  "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
   "main": "index.js",
+  "dependencies": {
+    "@hint/utils-dom": "^2.2.0",
+    "agent-base": "^6.0.2",
+    "agentkeepalive": "^4.2.1",
+    "aggregate-error": "^3.1.0",
+    "ajv": "^8.11.0",
+    "ajv-formats": "^2.1.1",
+    "ansi-align": "^3.0.1",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "array-union": "^2.1.0",
+    "arrify": "^1.0.1",
+    "asn1": "^0.2.6",
+    "assert-plus": "^1.0.0",
+    "astral-regex": "^2.0.0",
+    "asynckit": "^0.4.0",
+    "autoprefixer": "^9.8.8",
+    "aws-sign2": "^0.7.0",
+    "aws4": "^1.11.0",
+    "bail": "^1.0.5",
+    "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
+    "bcrypt-pbkdf": "^1.0.2",
+    "bl": "^4.1.0",
+    "boolbase": "^1.0.0",
+    "boxen": "^5.1.2",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browserslist": "^4.21.3",
+    "buffer": "^5.7.1",
+    "builtins": "^5.0.1",
+    "cacache": "^16.1.2",
+    "callsites": "^3.1.0",
+    "camelcase": "^6.3.0",
+    "camelcase-keys": "^6.2.2",
+    "caniuse-lite": "^1.0.30001377",
+    "caseless": "^0.12.0",
+    "chalk": "^4.1.2",
+    "character-entities": "^1.2.4",
+    "character-entities-legacy": "^1.1.4",
+    "character-reference-invalid": "^1.1.4",
+    "chownr": "^2.0.0",
+    "ci-info": "^3.3.2",
+    "clean-stack": "^2.2.0",
+    "cli-boxes": "^2.2.1",
+    "cli-cursor": "^3.1.0",
+    "cli-spinners": "^2.7.0",
+    "clone": "^1.0.4",
+    "clone-regexp": "^2.2.0",
+    "clone-response": "^1.0.3",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "combined-stream": "^1.0.8",
+    "concat-map": "^0.0.1",
+    "configstore": "^5.0.1",
+    "content-type": "^1.0.4",
+    "convert-source-map": "^1.8.0",
+    "core-util-is": "^1.0.2",
+    "cosmiconfig": "^7.0.1",
+    "cross-spawn": "^7.0.3",
+    "crypto-random-string": "^2.0.0",
+    "css-select": "^4.3.0",
+    "css-tree": "^1.1.3",
+    "css-what": "^6.1.0",
+    "cssesc": "^3.0.0",
+    "dashdash": "^1.14.1",
+    "debug": "^4.3.4",
+    "decamelize": "^1.2.0",
+    "decamelize-keys": "^1.1.0",
+    "deep-extend": "^0.6.0",
+    "deep-is": "^0.1.4",
+    "defaults": "^1.0.3",
+    "delayed-stream": "^1.0.0",
+    "depd": "^1.1.2",
+    "dir-glob": "^3.0.1",
+    "dom-serializer": "^1.4.1",
+    "domelementtype": "^2.3.0",
+    "domhandler": "^4.3.1",
+    "domutils": "^2.8.0",
+    "dot-prop": "^5.3.0",
+    "duplexer3": "^0.1.5",
+    "ecc-jsbn": "^0.1.2",
+    "electron-to-chromium": "^1.4.221",
+    "emoji-regex": "^8.0.0",
+    "encoding": "^0.1.13",
+    "end-of-stream": "^1.4.4",
+    "entities": "^2.2.0",
+    "err-code": "^2.0.3",
+    "error-ex": "^1.3.2",
+    "escalade": "^3.1.1",
+    "escape-goat": "^2.1.1",
+    "escape-string-regexp": "^1.0.5",
+    "eventemitter2": "^6.4.7",
+    "execa": "^4.1.0",
+    "execall": "^2.0.0",
+    "extend": "^3.0.2",
+    "extsprintf": "^1.3.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-glob": "^3.2.11",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fast-xml-parser": "^3.21.1",
+    "fastest-levenshtein": "^1.0.16",
+    "fastq": "^1.13.0",
+    "file-entry-cache": "^6.0.1",
+    "file-type": "^16.5.4",
+    "fill-range": "^7.0.1",
+    "find-up": "^4.1.0",
+    "flat-cache": "^3.0.4",
+    "flatted": "^3.2.6",
+    "forever-agent": "^0.6.1",
+    "fs-minipass": "^2.1.0",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "gensync": "^1.0.0-beta.2",
+    "get-stdin": "^8.0.0",
+    "get-stream": "^5.2.0",
+    "getpass": "^0.1.7",
+    "glob": "^8.0.3",
+    "glob-parent": "^5.1.2",
+    "global-dirs": "^3.0.0",
+    "global-modules": "^2.0.0",
+    "global-prefix": "^3.0.0",
+    "globals": "^11.12.0",
+    "globby": "^11.1.0",
+    "globjoin": "^0.1.4",
+    "gonzales-pe": "^4.3.0",
+    "graceful-fs": "^4.2.10",
+    "har-schema": "^2.0.0",
+    "har-validator": "^5.1.5",
+    "hard-rejection": "^2.1.0",
+    "has": "^1.0.3",
+    "has-flag": "^4.0.0",
+    "has-yarn": "^2.1.0",
+    "hosted-git-info": "^5.1.0",
+    "html-tags": "^3.2.0",
+    "htmlparser2": "^3.10.1",
+    "http-cache-semantics": "^4.1.0",
+    "http-proxy-agent": "^5.0.0",
+    "http-signature": "^1.2.0",
+    "https-proxy-agent": "^5.0.1",
+    "human-signals": "^1.1.1",
+    "humanize-ms": "^1.2.1",
+    "iconv-lite": "^0.6.3",
+    "ieee754": "^1.2.1",
+    "ignore": "^5.2.0",
+    "import-fresh": "^3.3.0",
+    "import-lazy": "^2.1.0",
+    "imurmurhash": "^0.1.4",
+    "indent-string": "^4.0.0",
+    "infer-owner": "^1.0.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ini": "^2.0.0",
+    "invert-kv": "^3.0.1",
+    "is-alphabetical": "^1.0.4",
+    "is-alphanumerical": "^1.0.4",
+    "is-buffer": "^2.0.5",
+    "is-ci": "^3.0.1",
+    "is-core-module": "^2.10.0",
+    "is-decimal": "^1.0.4",
+    "is-docker": "^2.2.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-hexadecimal": "^1.0.4",
+    "is-installed-globally": "^0.4.0",
+    "is-interactive": "^1.0.0",
+    "is-lambda": "^1.0.1",
+    "is-npm": "^5.0.0",
+    "is-number": "^7.0.0",
+    "is-obj": "^2.0.0",
+    "is-path-inside": "^3.0.3",
+    "is-plain-obj": "^1.1.0",
+    "is-regexp": "^2.1.0",
+    "is-stream": "^2.0.1",
+    "is-svg": "^4.3.2",
+    "is-typedarray": "^1.0.0",
+    "is-unicode-supported": "^0.1.0",
+    "is-wsl": "^2.2.0",
+    "is-yarn-global": "^0.3.0",
+    "isexe": "^2.0.0",
+    "isstream": "^0.1.2",
+    "js-tokens": "^4.0.0",
+    "jsbn": "^0.1.1",
+    "jsesc": "^2.5.2",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-schema": "^0.4.0",
+    "json-schema-traverse": "^1.0.0",
+    "json-stringify-safe": "^5.0.1",
+    "json5": "^2.2.1",
+    "jsonc-parser": "^3.1.0",
+    "jsonparse": "^1.3.1",
+    "jsprim": "^1.4.2",
+    "kind-of": "^6.0.3",
+    "known-css-properties": "^0.21.0",
+    "latest-version": "^5.1.0",
+    "lcid": "^3.1.1",
+    "levn": "^0.4.1",
+    "lines-and-columns": "^1.2.4",
+    "locate-path": "^5.0.0",
+    "lodash": "^4.17.21",
+    "lodash.truncate": "^4.4.2",
+    "log-symbols": "^4.1.0",
+    "longest-streak": "^2.0.4",
+    "lowercase-keys": "^2.0.0",
+    "lru-cache": "^7.13.2",
+    "make-dir": "^3.1.0",
+    "make-fetch-happen": "^10.2.1",
+    "map-age-cleaner": "^0.1.3",
+    "map-obj": "^4.3.0",
+    "mathml-tag-names": "^2.1.3",
+    "mdast-util-from-markdown": "^0.8.5",
+    "mdast-util-to-markdown": "^0.6.5",
+    "mdast-util-to-string": "^2.0.0",
+    "mem": "^5.1.1",
+    "meow": "^9.0.0",
+    "merge-stream": "^2.0.0",
+    "merge2": "^1.4.1",
+    "micromark": "^2.11.4",
+    "micromatch": "^4.0.5",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "mimic-fn": "^2.1.0",
+    "mimic-response": "^1.0.1",
+    "min-indent": "^1.0.1",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.6",
+    "minimist-options": "^4.1.0",
+    "minipass": "^3.3.4",
+    "minipass-collect": "^1.0.2",
+    "minipass-fetch": "^2.1.0",
+    "minipass-flush": "^1.0.5",
+    "minipass-json-stream": "^1.0.1",
+    "minipass-pipeline": "^1.2.4",
+    "minipass-sized": "^1.0.3",
+    "minizlib": "^2.1.2",
+    "mkdirp": "^1.0.4",
+    "ms": "^2.1.2",
+    "nanoid": "^3.3.4",
+    "negotiator": "^0.6.3",
+    "node-releases": "^2.0.6",
+    "normalize-package-data": "^3.0.3",
+    "normalize-range": "^0.1.2",
+    "normalize-selector": "^0.2.0",
+    "npm-package-arg": "^9.1.0",
+    "npm-registry-fetch": "^13.3.1",
+    "npm-run-path": "^4.0.1",
+    "nth-check": "^2.1.1",
+    "num2fraction": "^1.2.2",
+    "oauth-sign": "^0.9.0",
+    "once": "^1.4.0",
+    "onetime": "^5.1.2",
+    "optionator": "^0.9.1",
+    "ora": "^5.4.1",
+    "os-locale": "^5.0.0",
+    "p-defer": "^1.0.0",
+    "p-is-promise": "^2.1.0",
+    "p-limit": "^2.3.0",
+    "p-locate": "^4.1.0",
+    "p-map": "^4.0.0",
+    "p-try": "^2.2.0",
+    "package-json": "^6.5.0",
+    "parent-module": "^1.0.1",
+    "parse-entities": "^2.0.0",
+    "parse-json": "^5.2.0",
+    "parse5": "^6.0.1",
+    "parse5-htmlparser2-tree-adapter": "^6.0.1",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-type": "^4.0.0",
+    "peek-readable": "^4.1.0",
+    "performance-now": "^2.1.0",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "postcss": "^8.4.16",
+    "postcss-html": "^0.36.0",
+    "postcss-media-query-parser": "^0.2.3",
+    "postcss-resolve-nested-selector": "^0.1.1",
+    "postcss-selector-parser": "^6.0.10",
+    "postcss-syntax": "^0.36.2",
+    "postcss-value-parser": "^4.2.0",
+    "prelude-ls": "^1.2.1",
+    "prepend-http": "^2.0.0",
+    "proc-log": "^2.0.1",
+    "promise-inflight": "^1.0.1",
+    "promise-retry": "^2.0.1",
+    "psl": "^1.9.0",
+    "pump": "^3.0.0",
+    "punycode": "^2.1.1",
+    "pupa": "^2.1.1",
+    "qs": "^6.5.3",
+    "queue-microtask": "^1.2.3",
+    "rc": "^1.2.8",
+    "read-pkg": "^5.2.0",
+    "read-pkg-up": "^7.0.1",
+    "readable-stream": "^3.6.0",
+    "readable-web-to-node-stream": "^3.0.2",
+    "redent": "^3.0.0",
+    "registry-auth-token": "^4.2.2",
+    "registry-url": "^5.1.0",
+    "remark": "^13.0.0",
+    "remark-parse": "^9.0.0",
+    "remark-stringify": "^9.0.1",
+    "repeat-string": "^1.6.1",
+    "request": "^2.88.2",
+    "require-from-string": "^2.0.2",
+    "resolve": "^1.22.1",
+    "resolve-from": "^5.0.0",
+    "restore-cursor": "^3.1.0",
+    "retry": "^0.12.0",
+    "reusify": "^1.0.4",
+    "rimraf": "^3.0.2",
+    "run-parallel": "^1.2.0",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "semver": "^7.3.7",
+    "semver-diff": "^3.1.1",
+    "setimmediate": "^1.0.5",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "signal-exit": "^3.0.7",
+    "slash": "^3.0.0",
+    "slice-ansi": "^4.0.0",
+    "smart-buffer": "^4.2.0",
+    "socks": "^2.7.0",
+    "socks-proxy-agent": "^7.0.0",
+    "source-map": "^0.6.1",
+    "source-map-js": "^1.0.2",
+    "spdx-correct": "^3.1.1",
+    "spdx-exceptions": "^2.3.0",
+    "spdx-expression-parse": "^3.0.1",
+    "spdx-license-ids": "^3.0.11",
+    "specificity": "^0.4.1",
+    "sshpk": "^1.17.0",
+    "ssri": "^9.0.1",
+    "string_decoder": "^1.3.0",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "strip-final-newline": "^2.0.0",
+    "strip-indent": "^3.0.0",
+    "strip-json-comments": "^2.0.1",
+    "strnum": "^1.0.5",
+    "strtok3": "^6.3.0",
+    "style-search": "^0.1.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-recommended": "^4.0.0",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0",
+    "sugarss": "^2.0.0",
+    "supports-color": "^7.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "svg-tags": "^1.0.0",
+    "table": "^6.8.0",
+    "tar": "^6.1.11",
+    "to-fast-properties": "^2.0.0",
+    "to-readable-stream": "^1.0.0",
+    "to-regex-range": "^5.0.1",
+    "token-types": "^4.2.1",
+    "trim-newlines": "^3.0.1",
+    "trough": "^1.0.5",
+    "tunnel-agent": "^0.6.0",
+    "tweetnacl": "^0.14.5",
+    "type-check": "^0.4.0",
+    "type-fest": "^0.20.2",
+    "typedarray-to-buffer": "^3.1.5",
+    "unified": "^9.2.2",
+    "unique-filename": "^1.1.1",
+    "unique-slug": "^2.0.2",
+    "unique-string": "^2.0.0",
+    "unist-util-find-all-after": "^3.0.2",
+    "unist-util-is": "^4.1.0",
+    "unist-util-stringify-position": "^2.0.3",
+    "update-browserslist-db": "^1.0.5",
+    "update-notifier": "^5.1.0",
+    "uri-js": "^4.4.1",
+    "url-parse-lax": "^3.0.0",
+    "util-deprecate": "^1.0.2",
+    "uuid": "^3.4.0",
+    "v8-compile-cache": "^2.3.0",
+    "validate-npm-package-license": "^3.0.4",
+    "validate-npm-package-name": "^4.0.0",
+    "verror": "^1.10.0",
+    "vfile": "^4.2.1",
+    "vfile-message": "^2.0.4",
+    "wcwidth": "^1.0.1",
+    "which": "^2.0.2",
+    "widest-line": "^3.1.0",
+    "word-wrap": "^1.2.3",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^3.0.3",
+    "xdg-basedir": "^4.0.0",
+    "yallist": "^4.0.0",
+    "yaml": "^1.10.2",
+    "yargs-parser": "^20.2.9",
+    "zwitch": "^1.0.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,11 +419,6 @@
   },
   "homepage": "https://github.com/PedroH-Neves/Hello-Microverse#readme",
   "devDependencies": {
-    "@hint/utils-dom": "^2.2.0",
-    "hint": "^7.1.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^21.0.0",
-    "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.21.0"
+    "hint": "^7.1.1"
   }
 }
